--- a/index.html
+++ b/index.html
@@ -21,60 +21,63 @@
     <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
 
     <!-- Link to Moment JS -->
-  <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 
 
 </head>
 
 <body>
-    <div class="container">
 
-        <div class="title-area">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1 class="title">Train Scheduler</h1>
-                </div>
+    <div class="title-area">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="title">Train Scheduler</h1>
             </div>
         </div>
+    </div>
+    <div class="background-pattern" style="background-image:url(./assets/images/train_station.jpg)">
+        <div class="container">
 
-        <div class="current-train-area">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2 class="schedule-title">Current Train Schedule</h2>
-                    <div class="row">
-                        <div class="col-lg-2">Train Name</div>
-                        <div class="col-lg-2">Destination</div>
-                        <div class="col-lg-2">First Arrival(HH:mm)</div>
-                        <div class="col-lg-2">Frequency(mins)</div>
-                        <div class="col-lg-2">Next Arrival(mins)</div>
-                        <div class="col-lg-2">Minutes to Arrival</div>
-                    </div>
-                        
-                    <div class="current-train-info col-lg-12">
-                        <!-- new train data goes here -->
+
+            <div class="current-train-area">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h2 class="schedule-title">Current Train Schedule</h2>
+                        <div class="row">
+                            <div class="header col-lg-2">Train Name</div>
+                            <div class="header col-lg-2">Destination</div>
+                            <div class="header col-lg-2">First Arrival(HH:mm)</div>
+                            <div class="header col-lg-2">Frequency(mins)</div>
+                            <div class="header col-lg-2">Next Arrival(mins)</div>
+                            <div class="header col-lg-2">Minutes to Arrival</div>
+                        </div>
+
+                        <div class="current-train-info col-lg-12">
+                            <!-- new train data goes here -->
+                        </div>
                     </div>
                 </div>
             </div>
+
+            <form class="add-train-form">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h2 class="add-train-title">Add Train</h2>
+                        <p>Train Name</p>
+                        <input class="train-name form-control col-lg-12" type="text" placeholder="Enter Train Name">
+                        <p>Destination</p>
+                        <input class="destination form-control col-lg-12" type="text" placeholder="Enter Destination">
+                        <p>First Train Time (Use Military Time- HH:mm)</p>
+                        <input class="first-train-time form-control col-lg-12" type="text" placeholder="Enter First Train Time- HH:mm (military time)">
+                        <p>Frequency (Minutes)</p>
+                        <input class="frequency form-control col-lg-12" type="text" placeholder="Frequency(mins)">
+                        <input class="submit btn btn-secondary btn-lg" type="submit" value="submit">
+
+                    </div>
+
+                </div>
+            </form>
         </div>
-
-        <form class="add-train-form" action="">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2 class="add-train-title">Add Train</h2>
-                    <p>Train Name</p>
-                    <input class="train-name col-lg-12" type="text" placeholder="Enter Train Name">
-                    <P>Destination</P>
-                    <input class="destination col-lg-12" type="text" placeholder="Enter Destination">
-                    <p>First Train Time</p>
-                    <input class="first-train-time col-lg-12" type="text" placeholder="Enter First Train Time- HH:mm (military time)">
-                    <p>Frequency</p>
-                    <input class="frequency col-lg-12" type="text" placeholder="Frequency(mins)">
-                    <input class="submit" type="submit" value="submit">
-                
-                </div>
-
-            </div>
-        </form>
     </div>
 
 
