--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <div class="header col-lg-2">Next Arrival(mins)</div>
                             <div class="header col-lg-2">Minutes to Arrival</div>
                         </div> -->
-                        <table style="width:100%">
+                        <table style= "width:100%">
 
                             <tr class="row">
                                 <th class="header col-lg-2">Train Name</th>
@@ -90,7 +90,7 @@
                                 <th class="header col-lg-2">Minutes to Arrival</th>
                             </tr>
 
-                            <tr class="current-train-info col-lg-12">
+                            <tr class="current-train-info row">
                                 <!-- new train data goes here -->
                             </tr>
                         </table>
